fix: plan output did not delete the right temporal constraints